<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip"
    android:background="#000000"
    tools:context="com.cse4471.allen.vigilanteosu.SignupActivity">

    <!-- Email Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createUsername"
        android:singleLine="true"
        android:layout_marginBottom="5dip"/>

    <!-- Email input text -->
    <EditText android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="text"/>

    <!-- Password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createPassword"
        android:layout_marginBottom="5dip"/>

    <!-- Password input text -->
    <EditText android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <!-- Signup button -->
    <Button android:id="@+id/btnBecomeVigilante"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/signup"/>

    <!-- Already Registered Button -->
    <Button android:id="@+id/btnAlreadyRegistered"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alreadyRegistered"
        android:onClick="openLogin"/>


</LinearLayout>
