<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cse4471.allen.vigilanteosu.NewReportStartActivity">

    <TextView
        android:text="@string/newReportHeader"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createIncident"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/crimeCurrent"
        android:layout_below="@+id/createIncident"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:onClick="goTo_report_contact_authorities" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/crimeNotCurrent"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/crimeCurrent"
        android:layout_alignLeft="@+id/crimeCurrent"
        android:layout_alignStart="@+id/crimeCurrent"
        android:onClick="goTo_report_activity" />

</RelativeLayout>
