<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/norm_screen_padding"
    tools:context="com.cse4471.allen.vigilanteosu.NewReportContactAuthoritiesActivity"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/vigGray"
        android:padding="@dimen/norm_screen_padding"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/contact"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:gravity="center_horizontal"
            android:textSize="@dimen/large_text"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callCBUS"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:onClick="callColumbus"
                android:padding="@dimen/button_padding"
                android:background="@color/maxRed"
                android:textAllCaps="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callOSU"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:onClick="callOSU"
                android:layout_marginTop="20dp"
                android:padding="@dimen/button_padding"
                android:background="@color/ltRed"
                android:textAllCaps="true"/>

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/textCBUS"-->
                <!--android:id="@+id/button3"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--/>-->

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/textOSU"-->
                <!--android:id="@+id/button4"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--/>-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacted"
                android:id="@+id/button5"
                android:layout_gravity="center_horizontal"
                android:onClick="contacted"
                android:padding="@dimen/button_padding"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:background="@color/successGreen"
                android:textColor="@color/black"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
